# kgk_compe_5th

./: .gitignore  README.md  main.py  pyproject.toml  大気汚染予測コンペ 入賞戦略_.md  時系列予測モデル構築支援.md
.github/workflow/: ai-pr-reviewer.yml
data/raw/: sample_submission.csv  station_df.csv  test_df.csv  train_df.csv
notebook/: 01_eda_feature_enginnering.ipynb  02_base_model.ipynb
src/kgk_compe_5th/: main.py
src/kgk_compe_5th/data/: data_loader.py  processor.py
src/kgk_compe_5th/features/: engineering.py  feature_engineering.py
src/kgk_compe_5th/models/: ensemble.py  lightgbm_model.py  stacking.py  trainer.py
src/kgk_compe_5th/utils/: config.py  cross_validation.py  utils.py  visualize.py
